--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
     <link rel="stylesheet" href="./styles/template.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">   
 </head>
-<body>
-    
+<body onclick="init()">
+    <header>
+        <nav class="nav-bar-app">Bestell App</nav>
+    </header>
+    <main>
+        <div class="content"></div>
+        <div class="basket_wrapper"></div>
+    </main>
+    <footer>
+        <div class="footer-text">© 2025 Bestell App</div>
+    </footer>
 </body>
     <script src="./script.js" defer></script>
     <script src="./scripts/library.js" defer></script>
