Change div elements to section for semantic HTML in index.html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav class="nav-bar-app">Bestell App</nav>
     </header>
     <main>
-        <div class="content"></div>
-        <div class="basket_wrapper"></div>
+        <section class="content"></section>
+        <section class="basket_wrapper"></section>
     </main>
     <footer>
         <div class="footer-text">© 2025 Bestell App</div>
