--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bestell App</title>
-    <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/basket.css">
     <link rel="stylesheet" href="./styles/template.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">   
+    <link rel="stylesheet" href="./style.css">
+
 </head>
+
 <body onclick="init()">
-    <header>
-        <nav class="nav-bar-app">Bestell App</nav>
+    <header class="site-header">
+        <a class="site-logo" href="/" aria-label="Startseite">
+            <img src="./assets/pics/Logo.png" alt="Bestell App Logo">
+        </a>
+        <nav class="nav-bar-app" aria-label="Hauptnavigation">
+            <ul class="nav list-unstyled d-flex gap-3 m-0">
+                <li><a href="#content" class="nav-link">Restaurants</a></li>
+                <li><a href="#basket" class="nav-link">Warenkorb</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <section class="content"></section>
-        <section class="basket_wrapper"></section>
+        <section id="content">…</section>
+        <aside id="basket" aria-label="Warenkorb">…</aside>
     </main>
-    <footer>
+    <footer class="text-center py-3">
         <div class="footer-text">© 2025 Bestell App</div>
     </footer>
 </body>
-    <script src="./script.js" defer></script>
-    <script src="./scripts/library.js" defer></script>
-    <script src="./scripts/template.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<script src="./scripts/library.js" defer></script>
+<script src="./scripts/template.js" defer></script>
+<script src="./script.js" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+
 </html>
