--- a/index.html
+++ b/index.html
@@ -5,31 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bestell App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/basket.css">
     <link rel="stylesheet" href="./styles/template.css">
     <link rel="stylesheet" href="./style.css">
-
 </head>
 
 <body onclick="init()">
     <header class="site-header">
         <a class="site-logo" href="/" aria-label="Startseite">
-            <img src="./assets/pics/Logo.png" alt="Bestell App Logo">
+            <img class="logo-mv4" src="./assets/pics/Logo.png" alt="Bestell App Logo">
         </a>
-        <nav class="nav-bar-app" aria-label="Hauptnavigation">
-            <ul class="nav list-unstyled d-flex gap-3 m-0">
-                <li><a href="#content" class="nav-link">Restaurants</a></li>
-                <li><a href="#basket" class="nav-link">Warenkorb</a></li>
-            </ul>
-        </nav>
     </header>
     <main>
-        <section id="content">…</section>
-        <aside id="basket" aria-label="Warenkorb">…</aside>
+        <section class="content" id="content">…</section>
+        <aside class="basket_wrapper" id="basket" aria-label="Warenkorb">…</aside>
     </main>
-    <footer class="text-center py-3">
+    <footer class="footer-py-3">
         <div class="footer-text">© 2025 Bestell App</div>
     </footer>
 </body>
