--- a/index.html
+++ b/index.html
@@ -13,20 +13,15 @@
 <body>
   <header>
     <a class="site-logo" href="#" aria-label="Startseite">
-      <img src="./assets/pics/Logo.png" alt="Bestell App Logo">
+      <img class="logo-startseite" src="./assets/pics/Logo.png" alt="Bestell App Logo">
     </a>
-    <nav aria-label="Hauptnavigation">
-      <a href="#menu-root">Speisekarte</a> | <a href="#basket">Warenkorb</a>
-    </nav>
   </header>
-
   <main>
-    <section id="menu-root" aria-live="polite"></section>
+    <section id="content-wrapped" aria-live="polite"></section>
     <aside id="basket" aria-label="Warenkorb" aria-live="polite">
       <!-- wird von JS gefüllt -->
     </aside>
   </main>
-
   <footer style="text-align:center; padding:12px; border-top:1px solid #eee;">
     © 2025 Bestell App
   </footer>
