Refactor HTML structure, update menu rendering logic, and enhance CSS styles for improved layout and functionality

--- a/index.html
+++ b/index.html
@@ -8,26 +8,23 @@
   <link rel="stylesheet" href="./styles/basket.css">
   <link rel="stylesheet" href="./styles/template.css">
   <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
-
- </head>
+</head>
 <body>
   <header>
-    <a class="site-logo" href="#" aria-label="Startseite">
-      <img class="logo-startseite" src="./assets/pics/Logo.png" alt="Bestell App Logo">
-    </a>
-  </header>
+    <div class="site-logo" href="./index.html" aria-label="Startseite">
+      <img class="logo-header" href="./index.html" src="./assets/pics/Logo.png" alt="Bestell App Logo" height="40">
+    </div>
+    </header>
   <main>
-    <section id="content-wrapped" aria-live="polite"></section>
-    <aside id="basket" aria-label="Warenkorb" aria-live="polite">
-      <!-- wird von JS gefüllt -->
-    </aside>
+    <section id="menu-root" aria-live="polite"></section>
+    <aside id="basket" aria-label="Warenkorb" aria-live="polite"></aside>
   </main>
-  <footer style="text-align:center; padding:12px; border-top:1px solid #eee;">
+  <footer class="footer-Bapp" style="text-align:center; padding:12px; border-top:1px solid #eee;">
     © 2025 Bestell App
   </footer>
+  <script src="./scripts/library.js"></script>
+  <script src="./scripts/template.js"></script>
+  <script src="./scripts/app.js"></script>
+  <script src="./script.js"></script>
 </body>
-  <script src="./scripts/library.js" defer></script>
-  <script src="./scripts/template.js" defer></script>
-  <script src="./scripts/app.js" defer></script>
-  <script src="./script.js" defer></script>
 </html>
