--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script src="./scripts/library.js"></script>
   <script src="./scripts/template.js"></script>
   <script src="./scripts/app.js"></script>
+  <script src="./scripts/basket.js"></script>
   <script src="./script.js"></script>
 </body>
 </html>
