--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <footer class="footer-Bapp" style="text-align:center; padding:12px; border-top:1px solid #eee;">
     © 2025 Bestell App
   </footer>
-  <script src="./scripts/library.js"></script>
-  <script src="./scripts/template.js"></script>
-  <script src="./scripts/app.js"></script>
-  <script src="./scripts/basket.js"></script>
-  <script src="./script.js"></script>
 </body>
+  <script src="./scripts/library.js" defer></script>
+  <script src="./scripts/template.js" defer></script>
+  <script src="./scripts/app.js" defer></script>
+  <script src="./scripts/basket.js" defer></script>
+  <script src="./script.js" defer></script>
 </html>
