Add contact and imprint pages with updated links in footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <aside id="basket" aria-label="Warenkorb" aria-live="polite"></aside>
   </main>
   <footer class="footer-Bapp" style="text-align:center; padding:12px; border-top:1px solid #eee;">
-   <a>© 2025 Bestell App</a> | <a href="./imprint.html">Impressum</a> | <a href="./privacy.html">Datenschutz</a>
+   <a>© 2025 Bestell App</a> | <a href="./impressum/impressum.html">Impressum</a> | <a href="./contact.html/contact.html">Datenschutz</a>
 
   </footer>
 </body>
