--- a/privacy/datenschutz.html
+++ b/privacy/datenschutz.html
@@ -23,8 +23,10 @@
     </nav>
   </header>
   <main>
-    <section id="menu-root" aria-live="polite"></section>
-    <aside id="basket" aria-label="Warenkorb" aria-live="polite"></aside>
+    <div>
+        <h1>datenschutz</h1>
+        <a>Hier kommt der Datenschutztext hin.</a>
+    </div>
   </main>
   <footer class="footer-Bapp" style="text-align:center; padding:12px; border-top:1px solid #eee;">
    <a>© 2025 Bestell App</a> | <a href="./impressum/impressum.html">Impressum</a> | <a href="./privacy/datenschutz.html">Datenschutz</a>
