--- a/privacy/datenschutz.html
+++ b/privacy/datenschutz.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bestell App</title>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./styles/basket.css">
-  <link rel="stylesheet" href="./styles/template.css">
+  <link rel="stylesheet" href="./datenschutz.css">
   <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
