Fix navigation links in impressum and datenschutz pages for improved accessibility and structure

--- a/impressum/impressum.html
+++ b/impressum/impressum.html
@@ -10,13 +10,12 @@
 <body>
   <header>
     <nav class="nav-header" aria-label="Hauptnavigation">
-      <a class="site-logo" href="./index.html" aria-label="Startseite">
+      <a class="site-logo" href="" aria-label="Startseite">
         <img class="logo-header" src="./assets/pics/Logo.png" alt="Bestell App Logo" height="40">
       </a>
       <ul class="nav-list">
         <li><a class="nav-link" href="./index.html">Menü</a></li>
         <li><a class="nav-link" href="./about.html">Über uns</a></li>
-        <li><a class="nav-link" href="./contact.html">Kontakt</a></li>
       </ul>
     </nav>
   </header>
@@ -27,7 +26,7 @@
     </div>
   </main>
   <footer class="footer-Bapp" style="text-align:center; padding:12px; border-top:1px solid #eee;">
-   <a>© 2025 Bestell App</a> | <a href="./impressum/impressum.html">Impressum</a> | <a href="./privacy/datenschutz.html">Datenschutz</a>
+   <a>© 2025 Bestell App</a> | <a href="./impressum.html">Impressum</a> | <a href="./datenschutz.html">Datenschutz</a>
 
   </footer>
 </body>
