--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./styles/basket.css">
   <link rel="stylesheet" href="./styles/template.css">
+  <link rel="stylesheet" href="./impressum.css">
+  <link rel="stylesheet" href="./datenschutz.css">
   <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
