Update navigation links in impressum and datenschutz pages for correct pathing

--- a/privacy/datenschutz.html
+++ b/privacy/datenschutz.html
@@ -10,8 +10,8 @@
 <body>
   <header>
     <nav class="nav-header" aria-label="Hauptnavigation">
-      <a class="site-logo" href="./index.html" aria-label="Startseite">
-        <img class="logo-header" src="./assets/pics/Logo.png" alt="Bestell App Logo" height="40">
+      <a class="site-logo" href="../index.html" aria-label="Startseite">
+        <img class="logo-header" src="../assets/pics/Logo.png" alt="Bestell App Logo" height="40">
       </a>
     </nav>
   </header>
@@ -22,7 +22,7 @@
     </div>
   </main>
   <footer class="footer-Bapp" style="text-align:center; padding:12px; border-top:1px solid #eee;">
-   <a>© 2025 Bestell App</a> | <a href="./impressum/impressum.html">Impressum</a> | <a href="./privacy/datenschutz.html">Datenschutz</a>
+   <a>© 2025 Bestell App</a> | <a href="../impressum/impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutz</a>
 
   </footer>
 </body>
