--- a/impressum/impressum.html
+++ b/impressum/impressum.html
@@ -1,34 +1,50 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bestell App</title>
-  <link rel="stylesheet" href="./impressum.css">
-  <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
-</head>
-<body>
-  <header>
-    <nav class="nav-header" aria-label="Hauptnavigation">
-      <a class="site-logo" href="../index.html" aria-label="Startseite">
-        <img class="logo-header" src="../assets/pics/Logo.png" alt="Bestell App Logo" height="40">
-      </a>
-    </nav>
-  </header>
-  <main>
-    <div>
-        <h1>Impressum</h1>
-        <a>Hier kommt der Impressumstext hin.</a>
-    </div>
-  </main>
-  <footer class="footer-Bapp" style="text-align:center; padding:12px; border-top:1px solid #eee;">
-   <a>© 2025 Bestell App</a> | <a href="./impressum.html">Impressum</a> | <a href="../privacy/datenschutz.html">Datenschutz</a>
 
-  </footer>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bestell App</title>
+    <link rel="stylesheet" href="./impressum.css">
+    <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
+</head>
+
+<body>
+    <header>
+        <nav class="nav-header" aria-label="Hauptnavigation">
+            <a class="site-logo" href="../index.html" aria-label="Startseite">
+                <img class="logo-header" src="../assets/pics/Logo.png" alt="Bestell App Logo" height="40">
+            </a>
+        </nav>
+    </header>
+    <main>
+        <div>
+                <h1>Impressum</h1>
+
+                <p>Virxhin Bytyqi<br />
+                    Regensburger Stra&szlig;e 2<br />
+                    2<br />
+                    93197 Zeitlarn</p>
+
+                <h2>Kontakt</h2>
+                <p>Telefon: 017663882475<br />
+                    E-Mail: xhini95@gmail.com</p>
+
+                <p>Quelle: <a
+                        href="https://www.e-recht24.de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a>
+                </p>
+        </div>
+    </main>
+    <footer class="footer-Bapp" style="text-align:center; padding:12px; border-top:1px solid #eee;">
+        <a>© 2025 Bestell App</a> | <a href="./impressum.html">Impressum</a> | <a
+            href="../privacy/datenschutz.html">Datenschutz</a>
+
+    </footer>
 </body>
-  <script src="./scripts/library.js" defer></script>
-  <script src="./scripts/template.js" defer></script>
-  <script src="./scripts/app.js" defer></script>
-  <script src="./scripts/basket.js" defer></script>
-  <script src="./script.js" defer></script>
+<script src="./scripts/library.js" defer></script>
+<script src="./scripts/template.js" defer></script>
+<script src="./scripts/app.js" defer></script>
+<script src="./scripts/basket.js" defer></script>
+<script src="./script.js" defer></script>
+
 </html>
