Add hero section to index.html, include hero image, and update styles for improved layout

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
       </a>
     </nav>
   </header>
+  <section class="hero hero--img" aria-label="Willkommen">
+  <div class="hero__content">
+    <h1>Frisch, schnell, lecker.</h1>
+    <p>Bestell deine Lieblingsgerichte – direkt aus unserer Küche.</p>
+    <a class="btn btn--primary" href="#dishes">Zu den Hauptgerichten</a>
+  </div>
+</section>
   <main>
-   <section class="hero hero--img" aria-label="Willkommen">
-      <div class="hero__content">
-        <h1>Gleich loslegen</h1>
-        <p>Frisch, schnell, lecker – bestell deine Lieblingsgerichte.</p>
-        <a class="btn btn--primary hero__cta" href="#dishes">Zu den Hauptgerichten</a>
-      </div>
     </section>
     <section id="menu-root" aria-live="polite"></section>
     <aside id="basket" aria-label="Warenkorb" aria-live="polite"></aside>
