Refactor layout structure in index.html and update styles for main and basket sections

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a class="btn btn--primary" href="#dishes">Zu den Hauptgerichten</a>
   </div>
 </section>
-  <main>
+  <main class="layout">
     </section>
     <section id="menu-root" aria-live="polite"></section>
     <aside id="basket" aria-label="Warenkorb" aria-live="polite"></aside>
