Add logo-burger image and update styles for basket and hero sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Bestell App</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./styles/template.css">
+  <link rel="stylesheet" href="./styles/basket.css">
   <link rel="stylesheet" href="./impressum.css">
   <link rel="stylesheet" href="./datenschutz.css">
   <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
@@ -20,13 +21,17 @@
       </a>
     </nav>
   </header>
-  <section class="hero hero--img" aria-label="Willkommen">
   <div class="hero__content">
-    <h1>Frisch, schnell, lecker.</h1>
-    <p>Bestell deine Lieblingsgerichte – direkt aus unserer Küche.</p>
-    <a class="btn btn--primary" href="#dishes">Zu den Hauptgerichten</a>
+    <img class="hero--img" src="./assets/pics/hero.jpg" alt="Leckere Pizza, Burger und mehr">
+    <div>
+    <img class="burger-pinwand-image" src="./assets/pics/logo-burger.jpg" alt="Tages Burger">
   </div>
-</section>
+  </div>
+  <div class="hero--text">
+    <h1>Pizzeria Da Vinci</h1>
+    <p>Die besten Pizza, Burger und mehr.</p>
+  </div>
+  </section>
   <main class="main-layout">
     </section>
     <section id="menu-root" aria-live="polite"></section>
