Refactor HTML structure and remove unnecessary scripts; add menu data and implement rendering logic for menu items and basket

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./styles/template.css">
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/png" href="./assets/favicon/favicon-32x32.png" sizes="32x32">
-  
+ 
 </head>
 
 <body>
@@ -38,10 +38,6 @@
       </div>
     </nav>
   </header>
-
-
-
-
   <div class="wrapper_container">
     <div id="main_content">
       <section class="bg_img"></section>
@@ -76,11 +72,6 @@
           </div>
 
         </div>
-
-
-
-
-
         <div class="article_basket_box" id="menue_jumping">
           <h1 class="title_dishes">Menu</h1>
           <section id="article_container_all" class="arcticle_container_style_all"></section>
@@ -112,12 +103,8 @@
 
 </body>
 <script src="./scripts/basket.js"></script>
-<script src="./scripts/library.js"></script>
+<script src="./scripts/datenbank.js"></script>
 <script src="./scripts/template.js"></script>
 <script src="./scripts/toggle.js"></script>
 <script src="./script.js"></script>
-</script>
-
-</script>
-
 </html>
