--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
  -->
 
 </body>
-<script src="./scripts/basket.js"></script>
+<script src="./scripts/render.js"></script>
 <script src="./scripts/datenbank.js"></script>
 <script src="./scripts/template.js"></script>
 <script src="./scripts/toggle.js"></script>
