Add hero section styles and implement basket layout; update HTML structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="./styles/template.css">
   <link rel="stylesheet" href="./impressum.css">
   <link rel="stylesheet" href="./datenschutz.css">
+  <link rel="stylesheet" href="./styles/assets.css">
+  <link rel="stylesheet" href="./styles/basket.css">
   <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
 </head>
 
@@ -20,11 +22,12 @@
       </a>
     </nav>
   </header>
-  <section class="hero hero--img" aria-label="Willkommen">
-  <div class="hero__content">
-    <h1>Frisch, schnell, lecker.</h1>
+  <section class="hero-startseite" aria-label="Willkommen">
+    <div class="hero__image-container">
+    </div>
+    <div class="hero__content">
+    <h1>Davinci Restaurant</h1>
     <p>Bestell deine Lieblingsgerichte – direkt aus unserer Küche.</p>
-    <a class="btn btn--primary" href="#dishes">Zu den Hauptgerichten</a>
   </div>
 </section>
   <main class="main-layout">
