--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="hero__image-container">
     </div>
     <div class="hero__content">
-    <h1>Davinci Restaurant</h1>
+    <h1>Da'Vinci Restaurant</h1>
     <p>Bestell deine Lieblingsgerichte – direkt aus unserer Küche.</p>
   </div>
 </section>
