Add rating section to hero content; include tagline and user ratings

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
     </div>
     <div class="hero__content">
       <h1>Da'Vinci Restaurant</h1>
-      <p>Bestell deine Lieblingsgerichte – direkt aus unserer Küche.</p>
+      <p class="hero__tagline">Bestell deine Lieblingsgerichte – direkt aus unserer Küche.</p>
+      <div class="hero__rating">
+        <span class="stars">⭐⭐⭐⭐⭐</span>
+        <span class="rating-text">4.5/5</span>
+        <span class="rating-count">(650+ Bewertungen)</span>
+      </div>
     </div>
   </section>
   <main class="main-layout">
