--- a/index.html
+++ b/index.html
@@ -15,12 +15,31 @@
 </head>
 
 <body>
-  <header>
-    <nav class="nav-header" aria-label="Hauptnavigation">
+  <header class="site-header">
+    <div class="header-inner" aria-label="Hauptnavigation">
       <a class="site-logo" href="./index.html" aria-label="Startseite">
         <img class="logo-header" src="./assets/pics/Logo.png" alt="Bestell App Logo" height="40">
-      </a>
-    </nav>
+      </a> <!-- Desktop-Navigation -->
+      <nav class="nav-desktop" aria-label="Hauptnavigation">
+        <a href="#dishes">Karte</a>
+        <a href="#basket">Warenkorb</a>
+        <a href="./impressum/impressum.html">Impressum</a>
+        <a href="./privacy/datenschutz.html">Datenschutz</a>
+      </nav>
+      <!-- Hamburger-Button (nur mobil sichtbar) -->
+      <button class="nav-toggle" aria-expanded="false" aria-controls="mobileMenu" aria-label="Menü öffnen/schließen">
+        <span class="nav-toggle__bar"></span>
+        <span class="nav-toggle__bar"></span>
+        <span class="nav-toggle__bar"></span>
+      </button>
+      <!-- Mobiles Dropdown-Menü -->
+      <nav id="mobileMenu" class="nav-mobile" aria-label="Mobiles Menü" hidden>
+        <a href="#dishes">Karte</a>
+        <a href="#basket">Warenkorb</a>
+        <a href="./impressum/impressum.html">Impressum</a>
+        <a href="./privacy/datenschutz.html">Datenschutz</a>
+      </nav>
+    </div>
   </header>
   <section class="hero-startseite" aria-label="Willkommen">
     <div class="hero__image-container">
@@ -56,6 +75,7 @@
 <script src="./scripts/template.js" defer></script>
 <script src="./scripts/app.js" defer></script>
 <script src="./scripts/basket.js" defer></script>
+<script src="./scripts/toggle.js" defer></script>
 <script src="./script.js" defer></script>
 
 </html>
