Update favicon link to use PNG format for better compatibility

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./styles/template.css">
   <link rel="stylesheet" href="./styles/assets.css">
   <link rel="stylesheet" href="./styles/basket.css">
-  <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./assets/favicon/favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
