Add database script for menu items and update index.html to include it

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
   </dialog>
 </body>
-<script src="./scripts/library.js" defer></script>
+<script src="./scripts/datenbank.js" defer></script>
 <script src="./scripts/template.js" defer></script>
 <script src="./scripts/app.js" defer></script>
 <script src="./scripts/toggle.js" defer></script>
